// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<ArticleWrapper>
  <CenterSpinner />
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests draft 1`] = `
<ArticleWrapper>
  <ForwardRef(Stack)
    spacing={2}
  >
    <ForwardRef(Alert)>
      この記事は下書きです。あなただけが閲覧できます。
    </ForwardRef(Alert)>
    <Link
      to="/users/1"
    >
      <ForwardRef(Stack)
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        spacing={1}
      >
        <ForwardRef(Avatar)
          src="no-icon.jpg"
          sx={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
        <ForwardRef(Typography)
          color="gray"
        >
          Axel
        </ForwardRef(Typography)>
      </ForwardRef(Stack)>
    </Link>
    <ForwardRef(Typography)
      align="center"
      component="h2"
      variant="h4"
    >
      title
    </ForwardRef(Typography)>
    <ForwardRef(Box)
      sx={
        Object {
          "color": "gray",
          "textAlign": "right",
        }
      }
    >
      <ForwardRef(Typography)>
        投稿日 2022/4/1
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        更新日 2022/5/1
      </ForwardRef(Typography)>
    </ForwardRef(Box)>
    <ForwardRef(Divider) />
    <ForwardRef(Typography)>
      description
    </ForwardRef(Typography)>
    <ForwardRef(Divider) />
    <IconAndText
      component="h3"
      iconComponent={<Memo />}
      iconPosition="left"
      text="地図"
      variant="h5"
    />
    <AreaNames
      areaNames={
        Array [
          "シー",
        ]
      }
      variant="body2"
    />
    <TriviaMap
      additinalMarkers={
        Array [
          Object {
            "areaNames": Array [
              "シー",
            ],
            "lat": 0,
            "lng": 0,
            "markerId": 1,
            "numberOfPublicArticles": 1,
            "park": "S",
          },
        ]
      }
      disabled={true}
      doNotShowPostMarkers={true}
      height={300}
      initCenter={
        Object {
          "areaNames": Array [
            "シー",
          ],
          "lat": 0,
          "lng": 0,
          "markerId": 1,
          "numberOfPublicArticles": 1,
          "park": "S",
        }
      }
      initZoom={3}
      park="S"
    />
  </ForwardRef(Stack)>
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests loading 1`] = `
<ArticleWrapper>
  <CenterSpinner />
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests with article 1`] = `
<ArticleWrapper>
  <ForwardRef(Stack)
    spacing={2}
  >
    <Link
      to="/users/1"
    >
      <ForwardRef(Stack)
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        spacing={1}
      >
        <ForwardRef(Avatar)
          src="no-icon.jpg"
          sx={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
        <ForwardRef(Typography)
          color="gray"
        >
          Axel
        </ForwardRef(Typography)>
      </ForwardRef(Stack)>
    </Link>
    <ForwardRef(Typography)
      align="center"
      component="h2"
      variant="h4"
    >
      title
    </ForwardRef(Typography)>
    <ForwardRef(Box)
      sx={
        Object {
          "color": "gray",
          "textAlign": "right",
        }
      }
    >
      <ForwardRef(Typography)>
        投稿日 2022/4/1
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        更新日 2022/5/1
      </ForwardRef(Typography)>
    </ForwardRef(Box)>
    <ForwardRef(Divider) />
    <ForwardRef(Typography)>
      description
    </ForwardRef(Typography)>
    <ForwardRef(Divider) />
    <IconAndText
      component="h3"
      iconComponent={<Memo />}
      iconPosition="left"
      text="地図"
      variant="h5"
    />
    <AreaNames
      areaNames={
        Array [
          "シー",
        ]
      }
      variant="body2"
    />
    <TriviaMap
      additinalMarkers={
        Array [
          Object {
            "areaNames": Array [
              "シー",
            ],
            "lat": 0,
            "lng": 0,
            "markerId": 1,
            "numberOfPublicArticles": 1,
            "park": "S",
          },
        ]
      }
      disabled={true}
      doNotShowPostMarkers={true}
      height={300}
      initCenter={
        Object {
          "areaNames": Array [
            "シー",
          ],
          "lat": 0,
          "lng": 0,
          "markerId": 1,
          "numberOfPublicArticles": 1,
          "park": "S",
        }
      }
      initZoom={3}
      park="S"
    />
  </ForwardRef(Stack)>
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests with image 1`] = `
<ArticleWrapper>
  <ForwardRef(Stack)
    spacing={2}
  >
    <Link
      to="/users/1"
    >
      <ForwardRef(Stack)
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        spacing={1}
      >
        <ForwardRef(Avatar)
          src="no-icon.jpg"
          sx={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
        <ForwardRef(Typography)
          color="gray"
        >
          Axel
        </ForwardRef(Typography)>
      </ForwardRef(Stack)>
    </Link>
    <ForwardRef(Typography)
      align="center"
      component="h2"
      variant="h4"
    >
      title
    </ForwardRef(Typography)>
    <ForwardRef(Box)
      sx={
        Object {
          "color": "gray",
          "textAlign": "right",
        }
      }
    >
      <ForwardRef(Typography)>
        投稿日 2022/4/1
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        更新日 2022/5/1
      </ForwardRef(Typography)>
    </ForwardRef(Box)>
    <ForwardRef(Divider) />
    <Image
      src="image.jpg"
      width="full"
    />
    <ForwardRef(Typography)>
      description
    </ForwardRef(Typography)>
    <ForwardRef(Divider) />
    <IconAndText
      component="h3"
      iconComponent={<Memo />}
      iconPosition="left"
      text="地図"
      variant="h5"
    />
    <AreaNames
      areaNames={
        Array [
          "シー",
        ]
      }
      variant="body2"
    />
    <TriviaMap
      additinalMarkers={
        Array [
          Object {
            "areaNames": Array [
              "シー",
            ],
            "lat": 0,
            "lng": 0,
            "markerId": 1,
            "numberOfPublicArticles": 1,
            "park": "S",
          },
        ]
      }
      disabled={true}
      doNotShowPostMarkers={true}
      height={300}
      initCenter={
        Object {
          "areaNames": Array [
            "シー",
          ],
          "lat": 0,
          "lng": 0,
          "markerId": 1,
          "numberOfPublicArticles": 1,
          "park": "S",
        }
      }
      initZoom={3}
      park="S"
    />
  </ForwardRef(Stack)>
</ArticleWrapper>
`;
